test/tests/compiler/1_int_constants/invalid_parse/keyword_wrong_case.plx
pub main(none) i32 {
    RETURN 0
}
